<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.cutsizetools.ui.main.PageFragment2"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/etCoreDia"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintCoreDia"
        android:inputType="numberSigned"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSpeed2"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintSpeed2"
        android:inputType="numberSigned"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etRollDia"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintRollDia"
        android:inputType="numberSigned"
        android:maxLength="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDynRollLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="340dp"
        android:maxLength="9"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintStart_toEndOf="@+id/tvRollLength"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDynTimeToEndH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="390dp"
        android:maxLength="2"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintStart_toEndOf="@+id/tvTime"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDynTimeToEndM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="390dp"
        android:maxLength="2"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintStart_toEndOf="@+id/tvUnitHours"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etThickness"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintThickness"
        android:inputType="numberDecimal"
        android:maxLength="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/circleButton2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="430dp"
        android:background="@drawable/circle"
        android:text="@string/calculate2"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRollLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="330dp"
        android:text="@string/rollLength"
        android:textSize="@dimen/font_size_large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="380dp"
        android:text="@string/time"
        android:textSize="@dimen/font_size_large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@color/green_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSelectGsm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="30dp"

        android:text="@string/SelectGsm"
        android:textSize="@dimen/font_size_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spSelectGsm"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvThickness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="110dp"
        android:text="@string/thickness"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRollDia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="160dp"
        android:text="@string/rollDia"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCoreDia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="210dp"
        android:text="@string/coreDia"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSpeed2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="260dp"
        android:text="@string/speed2"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUnitHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="390dp"
        android:text="@string/UnitHours"
        android:textSize="@dimen/font_size_medium"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/tvDynTimeToEndH"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUnitMeters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="340dp"
        android:text="@string/UnitMeters"
        android:textSize="@dimen/font_size_medium"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/tvDynRollLength"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUnitMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="390dp"
        android:text="@string/UnitMinutes"
        android:textSize="@dimen/font_size_medium"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/tvDynTimeToEndM"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>